Bug 1869818 - Disable accelerated canvas if canvas worker threads are enabled. r=gfx-reviewers,lsalzman

Accelerated canvas requires that the canvas worker threads are disabled.
Since CanvasChild is a per thread singleton, we cannot meaningfully give
different behaviour to D2D canvas and accelerated (WebGL) canvas. For
now just disable accelerated canvas if those prefs are changed.

Differential Revision: https://phabricator.services.mozilla.com/D196307